Permission: Prevent overflow of name

--- a/src/app/projects/project-details/developers/project-details-developers.styl
+++ b/src/app/projects/project-details/developers/project-details-developers.styl
@@ -15,6 +15,9 @@
 
 .projects-project-details-principal-name
   color $label-secondary-color
+  text-overflow ellipsis
+  white-space nowrap
+  overflow hidden
 
 .projects-project-details-principal-permissions
   color $label-info-color
